--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ web_modules/
 .node_repl_history
 
 # Output of 'npm pack'
-*.tgz
+#*.tgz
 
 # Yarn Integrity file
 .yarn-integrity
@@ -128,3 +128,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+.idea
