--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signum-smartc-testbed",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A testbed for faster smart contract development with SmartC for Signum blockchain platform",
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
@@ -36,11 +36,11 @@
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
-    "vitest": "^0.34.6",
     "typedoc": "^0.25.1",
     "typedoc-plugin-missing-exports": "^2.1.0",
-    "typedoc-theme-oxide": "^0.1.6"
+    "typedoc-theme-oxide": "^0.1.6",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
