--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signum-smartc-testbed",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A testbed for faster smart contract development with SmartC for Signum blockchain platform",
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
@@ -32,8 +32,7 @@
   },
   "homepage": "https://github.com/ohager/signum-smartc-testbed#readme",
   "dependencies": {
-    "eta": "^3.1.1",
-    "smartc-signum-simulator": "file:smartc-signum-simulator-2.0.0.tgz"
+    "smartc-signum-simulator": "^2.0.0"
   },
   "devDependencies": {
     "husky": "^8.0.0",
