simulator to latest package and yarn upgrade

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signum-smartc-testbed",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "A testbed for faster smart contract development with SmartC for Signum blockchain platform",
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/ohager/signum-smartc-testbed#readme",
   "dependencies": {
-    "smartc-signum-simulator": "./smartc-signum-simulator-3.0.0.tgz"
+    "smartc-signum-simulator": "^3.0.0"
   },
   "devDependencies": {
     "husky": "^8.0.0",
