--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
   "scripts": {
-    "test": "vitest",
+    "test": "vitest run --coverage",
     "compile": "tsc",
     "build": "npm run compile && ./build.sh",
     "prepare": "husky install",
@@ -39,6 +39,7 @@
     "smartc-signum-simulator": "^3.0.2"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.3.1",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
@@ -46,7 +47,7 @@
     "typedoc-plugin-missing-exports": "^2.1.0",
     "typedoc-theme-oxide": "^0.1.6",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6"
+    "vitest": "^1.3.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
