--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "typedoc-plugin-missing-exports": "^2.1.0",
     "typedoc-theme-oxide": "^0.1.6",
     "typescript": "^5.2.2",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "@types/node": "^18.15.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
