--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,23 @@
+name: Build and Test
 on:
   workflow_dispatch:
   pull_request:
   push:
-    branches:
-      - main
-  steps:
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v4.0.2
-      with:
-        node-version: "18"
-    - name: Initialize
-      run: yarn install --frozen-lockfile
-    - name: Build & Test
-      run: |
-        yarn compile
-        yarn test
+
+jobs:
+  build-test:
+    name: Builds and Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: Install Dependencies
+        run: yarn install --frozen-lockfile
+      - name: Build
+        run: yarn compiler
+      - name: Test
+        run: yarn test
