--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Build and Test Testbed
 on:
   workflow_dispatch:
   pull_request:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-test:
-    name: Builds and Tests
+    name: Build and Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
