--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signum-smartc-testbed",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A testbed for faster smart contract development with SmartC for Signum blockchain platform",
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
@@ -39,6 +39,7 @@
     "smartc-signum-simulator": "^3.0.3"
   },
   "devDependencies": {
+    "@types/node": "^18.15.3",
     "@vitest/coverage-v8": "^1.3.1",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
@@ -47,8 +48,7 @@
     "typedoc-plugin-missing-exports": "^2.1.0",
     "typedoc-theme-oxide": "^0.1.6",
     "typescript": "^5.2.2",
-    "vitest": "^1.3.1",
-    "@types/node": "^18.15.3"
+    "vitest": "^1.3.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
